# gnucap-models

./: Makefile.am  autogen.sh  configure.ac
models-bsim/: Make2.gcc  Makefile.am
models-ngspice17/: Make2.gcc  Makefile.am  README
models-ngspice17/asrc/: Makefile  Makefile.in  wrapper.h
models-ngspice17/bjt/: Makefile  Makefile.in  bjtload.c  d_bjt-diffpair-tf.ckt.out  d_bjt-diffpair-tr.ckt.out  d_bjt-diffpair-tr2.ckt.out  d_bjt-pnp.ckt.out  d_bjt-schmitt-bypass.ckt.out  d_bjt-schmitt-nobypass.ckt.out  d_bjt.2.ckt.out  d_bjt.ckt.out  d_bjt.error1.ckt.out  wrapper.h
models-ngspice17/bjt2/: Makefile  Makefile.in  bjt2load.c  d_bjt-diffpair-ccs.ckt.out  d_bjt-diffpair-cjc.ckt.out  d_bjt-diffpair-dc.ckt.out  d_bjt-diffpair-nocap.ckt.out  d_bjt-diffpair-tf.ckt.out  d_bjt-diffpair-tr.ckt.out  d_bjt-diffpair-tran.ckt.out  d_bjt-pnp.ckt.out  d_bjt-rca3040.ckt.out  d_bjt-rtlinv.ckt.out  d_bjt-schmitt-bypass.ckt.out  d_bjt-schmitt-nobypass.ckt.out  wrapper.h
models-ngspice17/bsim1/: Makefile  Makefile.in  wrapper.h
models-ngspice17/bsim2/: Makefile  Makefile.in  wrapper.h
models-ngspice17/bsim3/: Makefile  Makefile.in  wrapper.h
models-ngspice17/bsim3soi/: Makefile  Makefile.in  wrapper.h
models-ngspice17/bsim3soi_dd/: Makefile  Makefile.in  wrapper.h
models-ngspice17/bsim3soi_fd/: Makefile  Makefile.in  wrapper.h
models-ngspice17/bsim3soi_pd/: Makefile  Makefile.in  wrapper.h
models-ngspice17/bsim3v0/: Makefile  Makefile.in  wrapper.h
models-ngspice17/bsim3v1/: Makefile  Makefile.in  wrapper.h
models-ngspice17/bsim3v1a/: Makefile  Makefile.in  wrapper.h
(+599 files in other folders)
