SUBDIRS = BSIM3v301 BSIM3v31 BSIM3v32 BSIM3v321 BSIM3v322 BSIM3v323 BSIM3v324 BSIM3v330 BSIM400 BSIM410 BSIM420 BSIM421 BSIM430 BSIM440 BSIM450 BSIM460 BSIM461 BSIM462 BSIM463 BSIM464 BSIM465 BSIMDD2p1 BSIMFD2p1 BSIMPD2p0 BSIMPD2p1 BSIMPD2p2 BSIMPD2p22 BSIMPD2p23 BSIMSOI3p0 BSIMSOI3p1 BSIMSOI3p11 BSIMSOI3p2 BSIMSOI4p0 BSIMSOI4p1 BSIMSOI4p2

MAKEFLAGS = PREFIX=${prefix}
