SUBDIRS = asrc bjt bjt2 bsim1 bsim2 bsim3 bsim3soi bsim3soi_dd bsim3soi_fd bsim3soi_pd bsim3v0 bsim3v1 bsim3v1a bsim3v1s bsim4 cap cccs ccvs cpl csw dio hfet1 hfet2 hisim ind isrc jfet jfet2 ltra mes mesa mos1 mos2 mos3 mos6 mos9 res soi3 sw tra txl urc vbic vccs vcvs vsrc

MAKEFLAGS = PREFIX=${prefix}
